# esp32-tutorials

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: index.md
shell/: createdb.sh
src/server/: main.py
test/: server.py
